# lockdev-saas-starter

./: .checkov.yaml  .editorconfig  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  AGENCY.md  AUDITOR.MD  DEPLOYMENT_REPORT.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROMPT.MD  Procfile  README.md  REMEDIATOR.md  VERIFICATION_CHECKLIST.md  biome.json  docker-compose.yml  ralph.sh
apps/backend/: Dockerfile  fix_primary_provider_constraint.sql  openapi.json  pyproject.toml  test_output.txt  verify_audit_rls.py
apps/backend/docs/: PRIMARY_PROVIDER_CONSTRAINT_REVIEW.md  PRIMARY_PROVIDER_FINAL_REPORT.md  PRIMARY_PROVIDER_REMEDIATION_SUMMARY.md
apps/backend/migrations/: check_primary_violations.sql  env.py  verify_constraint.py
apps/backend/scripts/: check_primary_provider_violations.py  generate_contracts.py  generate_schema.py  seed_e2e.py  seed_patients.py  sync_linear.py  test_logging.py
apps/backend/secrets/: private_firebase_key.json
apps/backend/src/: admin.py  config.py  constants.py  database.py  http_client.py  logging.py  main.py  validators.py  worker.py
apps/backend/tests/: conftest.py  test_ai_service.py  test_appointments.py  test_audit.py  test_audit_rls.py  test_auth.py  test_billing.py  test_billing_api.py  test_care_teams.py  test_config.py  test_consent.py  test_devices.py  test_documents.py  test_http_client.py  test_invitations.py  test_mfa.py  test_models.py  test_npi.py  test_organizations.py  test_phi_access_control.py  test_primary_provider_constraint.py  test_providers.py  test_proxies.py  test_security_p0.py  test_security_p1.py  test_super_admin.py  test_support.py  test_telephony.py  test_users.py
backend/: Dockerfile  inspect_ulid.py  openapi.json  pyproject.toml  verify_audit_rls.py
backend/app/: admin.py  main.py  worker.py
backend/app/api/: admin.py  consent.py  documents.py  events.py  health.py  invitations.py  organizations.py  patients.py  telemetry.py  users.py  webhooks.py
backend/app/core/: audit_sql.py  auth.py  config.py  context.py  db.py  http_client.py  logging.py  middleware.py  models_base.py  org_access.py  pii_masking.py  redis.py
backend/app/models/: __init__.py  appointment.py  audit.py  base.py  care_team.py  consent.py  contact.py  device.py  document.py  invitation.py  notification.py  organization.py  profile.py  session.py  support.py  task.py  user.py
backend/app/schemas/: contacts.py  invitations.py  organizations.py  patients.py  telemetry.py  users.py
backend/app/services/: ai.py  billing.py  storage.py  telephony.py
backend/migrations/: env.py
backend/migrations/versions/: 017e5e19edae_add_documents.py  0a6fde9a7ba6_secure_audit_logs.py  21aca93cf768_index_sync.py  24437e5500b3_create_calls_and_tasks_tables.py  24dbfc7f6725_add_org_counters.py  2b190a1ca083_merge_timezone_migration.py  2dd2736ecb9c_add_invitations.py  3c92e5d86a44_setup_audit_tables.py  43288dc8da70_create_appointments_table.py  4a597ae96c88_add_user_sessions.py  5059b27c2936_add_organization_is_active.py  51139b25fcd4_create_core_models.py  5d19c326cff3_add_patient_billing_manager.py  624aed595213_add_sms_consent_to_user.py  762c191f9b35_create_audit_log_table.py  76408be03f50_update_patient_and_add_contacts.py  7c9ef86bcf67_create_consent_models.py  7d2654ac4899_add_mfa_backup_codes.py  8814cf036b36_add_care_teams.py  8af88bf56c01_add_org_id_and_rls.py  8e090a79a418_add_support_tickets.py  95576851383f_add_user_devices.py  a1b2c3d4e5f6_user_sessions.py  adc402aab9bd_add_appointments.py  b2c3d4e5f6a7_mfa_secrets.py  be1ec14586f6_create_invitations_table.py  c3d4e5f6a7b8_user_devices.py  c53b4f41d9fa_add_notifications.py  cdbfddd60ea4_add_timezones.py  d4e5f6a7b8c9_contact_methods.py  d5e6f7a8b9c0_create_documents_table.py  dd4222bcd586_create_support_tables.py  df0edbedaeab_add_tasks_and_calls.py  e7a8b9c0d1f2_care_teams_and_provider_updates.py  ea2e58f69efd_add_soft_delete_to_appointment.py  ec20df1795df_enable_rls_on_new_tables.py  f47bf61a922e_audit_and_rls.py  g1h2i3j4k5l6_create_notifications_table.py  h2i3j4k5l6m7_create_messaging_tables.py  i3j4k5l6m7n8_add_timezone_fields.py
backend/scripts/: generate_schema.py  seed_e2e.py  seed_patients.py  sync_linear.py  test_logging.py
backend/src/: admin.py  config.py  constants.py  database.py  http_client.py  logging.py  main.py  validators.py  worker.py
backend/src/api/: admin.py  appointments.py  billing.py  calls.py  consent.py  documents.py  events.py  invitations.py  messaging.py  notifications.py  organizations.py  patients.py  providers.py  proxies.py  staff.py  support.py  tasks.py  users.py  webhooks.py
backend/src/middleware/: audit.py  context.py
backend/src/models/: __init__.py  appointments.py  assignments.py  audit.py  care_teams.py  communications.py  consent.py  contacts.py  devices.py  documents.py  invitations.py  mixins.py  operations.py  organizations.py  profiles.py  sessions.py  support.py  users.py
backend/src/schemas/: appointments.py  audit.py  base.py  billing.py  care_teams.py  documents.py  invitations.py  messaging.py  operations.py  organizations.py  patients.py  providers.py  proxies.py  support.py  users.py
backend/src/security/: auth.py  consent.py  org_access.py
backend/src/services/: ai.py  billing.py  messaging.py  notifications.py
backend/src/utils/: npi.py
backend/tests/: conftest.py  test_admin.py  test_ai_service.py  test_appointments.py  test_audit.py  test_audit_rls.py  test_audit_triggers.py  test_auth.py  test_billing.py  test_billing_api.py  test_care_teams.py  test_config.py  test_consent.py  test_devices.py  test_documents.py  test_http_client.py  test_invitations.py  test_mfa.py  test_models.py  test_npi.py  test_organizations.py  test_providers.py  test_proxies.py  test_rls.py  test_rls_extended.py  test_super_admin.py  test_support.py  test_telephony.py  test_users.py  test_worker.py
backend/tests/api/: conftest.py  test_calls.py  test_consent_enforcement.py  test_events.py  test_headers.py  test_health.py  test_messaging.py  test_notifications.py  test_patients.py  (+4 more)
(+1382 files in other folders)
